[tool.poetry]
name = "game-api"
version = "0.1.0"
description = ""
authors = ["Blaine Oania <Blaine.Oania@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-session = "^0.8.0"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
